Fixed padding for horizontal scroll bar.

--- a/src/main/resources/view/Theme.css
+++ b/src/main/resources/view/Theme.css
@@ -255,7 +255,14 @@
 
 .scroll-bar .increment-arrow, .scroll-bar .decrement-arrow {
     -fx-shape: " ";
+}
+
+.scroll-bar:vertical .increment-arrow, .scroll-bar:vertical .decrement-arrow {
     -fx-padding: 1 8 1 8;
+}
+
+.scroll-bar:horizontal .increment-arrow, .scroll-bar:horizontal .decrement-arrow {
+    -fx-padding: 8 1 8 1;
 }
 
 #cardPane {
